--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.11.2",
     "react-tabs": "^6.0.1",
+    "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.7.5"
   },
