--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "daisyui": "^2.51.6",
     "firebase": "^9.22.0",
     "localforage": "^1.10.0",
+    "lottie-react": "^2.4.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -26,7 +27,8 @@
     "react-tabs": "^6.0.1",
     "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
-    "sweetalert2": "^11.7.5"
+    "sweetalert2": "^11.7.5",
+    "swiper": "^10.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
